2007-12-22  Mikio Hirabayashi  <mikio@fallabs.com>

	- Converters from Depot/Curia/Villa to TCHDB/TCBDB were added.

	- Release: 1.8.78

2007-10-18  Mikio Hirabayashi  <mikio@fallabs.com>

	- code clean-up.

	- Release: 1.8.77

2007-03-07  Mikio Hirabayashi  <mikio@fallabs.com>

	- The hash function of on-memory map was optimized.
	- A bug related to large object was fixed.
	- Release: 1.8.76

2006-11-10  Mikio Hirabayashi  <mikio@fallabs.com>

	- The utility API was enhanced.
	- A bug related to B+ tree API for Ruby was fixed.
	- Release: 1.8.75

2006-11-02  Mikio Hirabayashi  <mikio@fallabs.com>

	- A bug related to optimization on Intel Mac series was escaped.
	- Release: 1.8.74

2006-10-20  Mikio Hirabayashi  <mikio@fallabs.com>

	- A bug related to BZIP2 encoding was fixed.
	- Release: 1.8.73

2006-10-06  Mikio Hirabayashi  <mikio@fallabs.com>

	- The utility API was enhanced.
	- Release: 1.8.72

2006-08-24  Mikio Hirabayashi  <mikio@fallabs.com>

	- Makefile was modified to assure portability.
	- Silent flag was added to the C++ API, the Java API, and the Ruby API.
	- Release: 1.8.71

2006-08-18  Mikio Hirabayashi  <mikio@fallabs.com>

	- A bug of segmentation fault on BSD was fixed.
	- A test command for checking multi thread safety was added.
	- Release: 1.8.70

2006-08-15  Mikio Hirabayashi  <mikio@fallabs.com>

	- Mutex controll in C++ API became refined.
	- Release: 1.8.69

2006-08-08  Mikio Hirabayashi  <mikio@fallabs.com>

	- A bug about memory alignment was fixed.
	- A bug of handling meta data on big endian platforms was fixed.
	- Release: 1.8.68

2006-08-05  Mikio Hirabayashi  <mikio@fallabs.com>

	- A bug about memory alignment was fixed.
	- A bug about parsing MIME was fixed.
	- Release: 1.8.67

2006-08-05  Mikio Hirabayashi  <mikio@fallabs.com>

	- The utility API was enhanced.
	- Release: 1.8.66

2006-08-03  Mikio Hirabayashi  <mikio@fallabs.com>

	- The extended API was enhanced.
	- The extended advanced API was enhanced.
	- Release: 1.8.65
